--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "useUnknownInCatchVariables": false
   },
   "exclude": ["node_modules", "/"],
   "include": ["src/**/*", "modules.d.ts", ".eslintrc.json"]
