--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.14",
     "axios": "^0.27.2",
     "husky": "^7.0.4",
+    "jwt-decode": "^3.1.2",
     "lint-staged": "^12.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
